public class LZSS {
}
